--- a/assets/css/atum-admin-modals.css
+++ b/assets/css/atum-admin-modals.css
@@ -1960,6 +1960,10 @@ input[type=button].btn-block {
   content: "\e990";
 }
 
+.atmi-question:before {
+  content: "\e9d9";
+}
+
 .atmi-question-circle:before {
   content: "\e991";
 }
