--- a/assets/css/atum-list.css
+++ b/assets/css/atum-list.css
@@ -3317,7 +3317,7 @@ tr.introjs-showElement > th {
 }
 
 .introjs-tooltiptext {
-  padding: 20px;
+  padding: 15px;
   border-top: 1px solid #fff;
   color: #6c757d;
   border-bottom: 1px solid #fff;
@@ -3616,6 +3616,7 @@ tr.introjs-showElement > th {
   word-wrap: break-word;
 }
 .introjs-tooltip .introjs-tooltiptext ul {
+  padding-left: 15px;
   list-style: outside;
 }
 .introjs-tooltip .introjs-bullets {
@@ -3773,7 +3774,7 @@ body.atum-show-help-markers .atum-help-marker.active:hover:before {
   background-color: #ff4848 !important;
 }
 body.running-atum-help-guide .atum-help-marker:before {
-  display: none !important;
+  visibility: hidden !important;
 }
 
 .popover {
