--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -3957,6 +3957,9 @@ body.allow-multiple-suppliers .wc-backbone-modal .alert {
           box-sizing: border-box;
   float: left;
 }
+.atum_order_actions .wpml-ls .select2-container {
+  width: auto !important;
+}
 
 #atum_order_notes .inside, #atum_order_notes .atum-meta-box {
   margin: 0;
