--- a/assets/scss/atoms/_help-guides.scss
+++ b/assets/scss/atoms/_help-guides.scss
@@ -595,7 +595,7 @@ body {
 						height: 16px !important;
 						right: -8px !important;
 						top: -8px !important;
-						z-index: 99998 !important;
+						z-index: 9989 !important; // One under the WP menu sidebar.
 						border-radius: 50px !important;
 						text-indent: unset !important;
 						cursor: help !important;
