--- a/assets/css/atum-orders.css
+++ b/assets/css/atum-orders.css
@@ -3136,6 +3136,7 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
   top: 0;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
+  display: inline-block;
 }
 .wrap h1.wp-heading-inline .page-title-action.extend-list-table, .wrap h1.wp-heading-inline .page-title-action:active.extend-list-table {
   font-size: 12px;
