--- a/assets/scss/atoms/_page-title.scss
+++ b/assets/scss/atoms/_page-title.scss
@@ -37,6 +37,7 @@
 					margin-left: 14px;
 					top: 0;
 					transition: .2s ease-in-out;
+					display: inline-block;
 					
 					&.extend-list-table {
 						font-size: 12px;
