--- a/assets/scss/molecules/_sweet-alert.scss
+++ b/assets/scss/molecules/_sweet-alert.scss
@@ -119,6 +119,13 @@
 			}
 		}
 		
+		.alert {
+			p {
+				text-align: left;
+				margin: 0;
+			}
+		}
+		
 		.swal2-loader {
 			border-color: var(--primary) transparent var(--primary) transparent;
 		}
