--- a/assets/css/atum-marketing-popup.css
+++ b/assets/css/atum-marketing-popup.css
@@ -1949,6 +1949,10 @@ input[type=button].btn-block {
 .swal2-container .swal2-modal a:hover {
   color: var(--wp-link-hover);
 }
+.swal2-container .swal2-modal .alert p {
+  text-align: left;
+  margin: 0;
+}
 .swal2-container .swal2-modal .swal2-loader {
   border-color: var(--primary) transparent var(--primary) transparent;
 }
