--- a/assets/css/atum-settings.css
+++ b/assets/css/atum-settings.css
@@ -3739,6 +3739,10 @@ h2 .atum-help-tip {
 .swal2-container .swal2-modal a:hover {
   color: var(--wp-link-hover);
 }
+.swal2-container .swal2-modal .alert p {
+  text-align: left;
+  margin: 0;
+}
 .swal2-container .swal2-modal .swal2-loader {
   border-color: var(--primary) transparent var(--primary) transparent;
 }
